--- a/README.org
+++ b/README.org
@@ -69,7 +69,7 @@ of Yomichan, but it is going to require similarly annoying console one-offs.
 
 Instead, I strongly recommend migrating to [[https://github.com/yomidevs/yomitan/][Yomitan]] where there is first-class support for importing (and
 exporting) this data in the =Backup= section of the settings page. The UI there
-should be self-explanatory, but refer to the [[https://github.com/yomidevs/yomitan?tab=readme-ov-file#migrating-from-yomichan][Yomitan repo's documentation]]
+should be self-explanatory, but refer to the [[https://github.com/yomidevs/yomitan/blob/master/docs/yomichan-migration.md#migrating-from-yomichan][Yomitan repo's documentation]]
 and Yomitan's welcome page for more information.
 
 * Dependencies
