--- a/README.org
+++ b/README.org
@@ -32,7 +32,7 @@ to that end.
 + Paste the following into the console and wait for the export + download to
   finish:
 #+begin_src js
-fetch("https://raw.githubusercontent.com/yomidevs/yomichan-data-exporter/releases/latest/yomichan-data-exporter.min.js")
+fetch("https://github.com/yomidevs/yomichan-data-exporter/releases/latest/download/yomichan-data-exporter.min.js")
   .then((resp) => resp.text())
   .then((srcText) => {
     eval(srcText);
@@ -50,11 +50,11 @@ fetch("https://raw.githubusercontent.com/yomidevs/yomichan-data-exporter/release
 + Unfortunately(?!), Yomichan released on Chrome doesn't have permission to
   actually inject code (I tried a whole bunch of different approaches and the
   permissions are just lacking) so you are going to have to paste the contents
-  of the [[https://raw.githubusercontent.com/yomidevs/yomichan-data-exporter/releases/latest/yomichan-data-exporter.min.js][exporter code]] into the console.
+  of the [[https://github.com/yomidevs/yomichan-data-exporter/releases/latest/download/yomichan-data-exporter.min.js][exporter code]] into the console.
 
   It is a very long "one-liner" and apparently github is pretty bad at handling
   all of it being put into a code box so you may want to open the raw file,
-  select all, then copy and paste into the console. [[https://raw.githubusercontent.com/yomidevs/yomichan-data-exporter/releases/latest/yomichan-data-exporter.min.js][Link to the raw]].
+  select all, then copy and paste into the console. [[https://github.com/yomidevs/yomichan-data-exporter/releases/latest/download/yomichan-data-exporter.min.js][Link to the raw]].
 
 + Finally, paste the following into the console and wait for the export +
   download to finish:
